--- a/Homepage.html
+++ b/Homepage.html
@@ -31,7 +31,7 @@
         <p>Explore our vast collection of books and discover your next favorite book.</p>
         <p>Join us in our journey of reading and learning.</p>
         <br>
-        <button>Join Us</button>
+        <a href="./Sign-in.html">Join Us</a>
     </div>
 
     <footer id="footer">
