--- a/Purchase.html
+++ b/Purchase.html
@@ -42,30 +42,30 @@
         <form id="purchase" action="/submit-purchase" method="post">
             <span id="name">
                 <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" name="firstName" required>
+                <input type="text" id="firstName" name="firstName">
                 <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" name="lastName" required>
+                <input type="text" id="lastName" name="lastName">
             </span>
             <br>
             <label for="address">Address:</label>
-            <input type="text" id="address" name="address" required>
+            <input type="text" id="address" name="address">
             <br>
             <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="tel" id="phone" name="phone">
             <br>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email">
             <br>
             <span id="money-related">
                 <label for="paymentMethod">Payment Method:</label>
-                <select id="paymentMethod" name="paymentMethod" required>
+                <select id="paymentMethod" name="paymentMethod">
                     <option value="creditCard">Credit Card</option>
                     <option value="paypal">PayPal</option>
                     <option value="bankTransfer">Bank Transfer</option>
                     <option value="cashOnDelivery">Cash on Delivery</option>
                 </select>
                 <label for="quantity">Quantity:</label>
-                <input type="number" id="quantity" name="quantity" min="1" required>
+                <input type="number" id="quantity" name="quantity" min="1">
             </span>
             <br>
             <button type="submit">Purchase</button>
@@ -75,6 +75,7 @@
         <p>Contact us at: BookLand@gmail.com</p>
         <p>Feedback: <a href="/feedback">Give Feedback</a></p>
     </footer>
+<script src="script-purchase.js"></script>
 </body>
 
 </html>
