--- a/Sign-in.html
+++ b/Sign-in.html
@@ -26,11 +26,11 @@
     <div id="form-container">
         <form action="" method="post">
             <h1>Sign in</h1>
-            <label for="Email">Email:</label>
-            <input type="email" id="Email" name="Email" required>
+            <label for="Username">Username:</label>
+            <input type="text" id="Username" name="Username">
             <br>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password">
             <br>
             <button type="submit">Sign In</button>
         </form>
@@ -39,6 +39,8 @@
         <p>Contact us at: BookLand@gmail.com</p>
         <p>Feedback: <a href="/feedback">Give Feedback</a></p>
     </footer>
+    
+    <script src="script-sign-in.js"></script>>
 </body>
 
 </html>
