--- a/Purchase.html
+++ b/Purchase.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purchase</title>
-    <link rel="stylesheet" href="Purchase.css">
+    <link rel="stylesheet" href="purchase.css">
 </head>
 
 <body>
