Trigger GitHub Pages rebuild

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         in the purchase page i juust provided a one example of one of books that can be purchased as i know that there
         are much
         simpler way to create just one interactive model for al books through express.js or whatever so, i gave just one
-        example of the required books
+        example of the required books.
     </p>
 </body>
 
